RESOLVED FIXED211276
REGRESSION (r260214): Leak of _WKTextInputContext in -[WKContentView _isTextInputContextFocused:]
https://bugs.webkit.org/show_bug.cgi?id=211276
Summary REGRESSION (r260214): Leak of _WKTextInputContext in -[WKContentView _isTextI...
David Kilzer (:ddkilzer)
Reported 2020-04-30 20:19:09 PDT
Leak of _WKTextInputContext in -[WKContentView _isTextInputContextFocused:]. Found by clang static analyzer. Regressed in: [iOS] Add a way to focus a text input and place a caret <https://bugs.webkit.org/show_bug.cgi?id=210611> <rdar://problem/61893062> <https://trac.webkit.org/r260214>
Attachments
Patch v1 (2.29 KB, patch)
2020-04-30 20:21 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-30 20:19:24 PDT
David Kilzer (:ddkilzer)
Comment 2 2020-04-30 20:21:37 PDT
Created attachment 398151 [details] Patch v1
Daniel Bates
Comment 3 2020-04-30 20:35:57 PDT
Comment on attachment 398151 [details] Patch v1 Patch looks good. What a silly mistake.
David Kilzer (:ddkilzer)
Comment 4 2020-04-30 20:37:34 PDT
(In reply to Daniel Bates from comment #3) > Comment on attachment 398151 [details] > Patch v1 > > Patch looks good. What a silly mistake. Would have been fine with ARC. Someday we'll have nice things. :)
EWS
Comment 5 2020-05-01 03:26:37 PDT
Committed r260994: <https://trac.webkit.org/changeset/260994> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398151 [details].
Note You need to log in before you can comment on or make changes to this bug.