REGRESSION (r260214): Leak of _WKTextInputContext in -[WKContentView _isTextInputContextFocused:] <https://webkit.org/b/211276> <rdar://problem/62696724>

Reviewed by Daniel Bates.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _focusTextInputContext:placeCaretAt:completionHandler:]):
- Use RetainPtr<> to pass the copy of _WKTextInputContext into
  the block to fix the leak.


Canonical link: https://commits.webkit.org/224176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260994 268f45cc-cd09-0410-ab3c-d52691b4dbfc